--- a/packages/admin/composer.json
+++ b/packages/admin/composer.json
@@ -23,7 +23,8 @@
         "marvinosswald/filament-input-select-affix": "^0.2.0",
         "leandrocfe/filament-apex-charts": "^3.1.3",
         "awcodes/shout": "^2.0.2",
-        "awcodes/filament-badgeable-column": "^2.3.2"
+        "awcodes/filament-badgeable-column": "^2.3.2",
+        "stancl/tenancy": "3.x-dev"
     },
     "extra": {
         "laravel": {
