--- a/packages/admin/composer.json
+++ b/packages/admin/composer.json
@@ -24,7 +24,8 @@
         "leandrocfe/filament-apex-charts": "^3.1.3",
         "awcodes/shout": "^2.0.2",
         "awcodes/filament-badgeable-column": "^2.3.2",
-        "stancl/tenancy": "3.x"
+        "stancl/tenancy": "^3.8"
+
     },
     "extra": {
         "laravel": {
