--- a/packages/core/composer.json
+++ b/packages/core/composer.json
@@ -51,6 +51,7 @@
         "doctrine/dbal": "^3.6",
         "lukascivil/treewalker": "0.9.1",
         "spatie/php-structure-discoverer": "^2.0",
-        "spatie/laravel-blink": "^1.7"
+        "spatie/laravel-blink": "^1.7",
+        "stancl/tenancy": "^3.8"
     }
 }
